--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 PORT=3000
 
 # Database Configuration
-DB_HOST=Admin
+DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=Megharaj@123
 DB_NAME=temple_booking
